day-14/pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx
  name: nginx
spec:
  containers:
  - image: nginx
    name: nginx
    resources:
      limits:
        cpu: 1
        memory: 64Mi
  dnsPolicy: ClusterFirst
  restartPolicy: Always
