day-14/disallow-root-user.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-root-user
spec:
  validationFailureAction: Enforce
  rules:
  - name: check-runAsNonRoot
    match:
      resources:
        kinds:
        - Pod
    exclude:
      resources:
        namespaces:
        - spigariol    
    validate:
      message: "running as root isn't allowed.Set runAsnonRoot to true."
      pattern:
        spec:
          containers:
          - securityContext:
            runAsNonRoot: true
