day-14/require-resources-limits.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resources-limitss
spec:
  validationFailureAction: Enforce
  rules:
  - name: validate-limits
    match:
      resources: 
        kinds: 
        - Pod
    validate:
      message: "Needs imits definitions for resources"
      pattern:
        spec:
          containers:
           - name: "*"
             resources:
              limits:
                cpu: "?*"
                memory: "?*"
